sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: type boolean
  var ok:boolean = false
         ^AlgBubbleSort1:7: error: value tp is not a member of Int
    for (i<- 1 tp getNombreValeur()-1){
               ^AlgBubbleSort1:7: error: not found: value getNombreValeur
    for (i<- 1 tp getNombreValeur()-1){
                  ^